--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,10 +7,10 @@ $footer-bg: #1e1e1e;
 // Ширина контейнера
 $max-width: 1240px;
 
-$main-color: #D3991A;
+$main-color: #744746;
 $dark-color: #1e1e1e;
 $wa-color: #39b400;
-$red-color: #F64040;
+$red-color: #FF2020;
 
 // Анимация
 $transition-fast: background-color 0.2s ease, color 0.2s ease;
