--- a/src/scss/UI/_banner.scss
+++ b/src/scss/UI/_banner.scss
@@ -1,12 +1,26 @@
+@use "../base/variables" as *;
+
 .banner {
     position: relative;
-    background-color: #D39B5E;
+    background-color: $main-color;
     color: #ffffff;
     overflow: hidden;
     width: 100%;
     min-height: 35.75rem; // 572px
     margin-bottom: 3rem;
     z-index: 1;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 1;
+        background: rgba(30, 30, 30, 0.4);
+    }
 
     @media (max-width: 64rem) {
         // 1024px
@@ -15,22 +29,6 @@
         height: max-content;
         margin: 1rem auto 2.3125rem; // 37px
         border-radius: 1rem; // 16px
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
-                0deg,
-                rgba(156, 112, 64, 0.8),
-                rgba(156, 112, 64, 0.8)
-            );
-            pointer-events: none;
-            z-index: 1;
-        }
     }
 
     @media (max-width: 48rem) {
@@ -62,7 +60,7 @@
             left: -10%;
             width: 50%;
             height: 100%;
-            background: rgba(84, 63, 40, 0.8);
+            background: rgba(0, 0, 0, 0.4);
             filter: blur(100px);
             border-radius: 50%;
             transform: translate(-10%, -50%);
@@ -74,7 +72,6 @@
                 left: 0;
                 transform: translate(0%, -50%);
                 width: 100%;
-                background: rgba(156, 112, 64, 0.8);
             }
         }
 
@@ -133,20 +130,22 @@
         background-size: cover;
         background-position: center;
         height: 100%;
+        width: calc(100% / 3);
 
         &--left {
             left: 0;
-            z-index: 2;
-            width: 70%;
             background-image: url("../assets/images/banner-left.jpg");
+        }
+
+        &--center {
+            left: 50%;
+            transform: translateX(-50%);
+            background-image: url("../assets/images/banner-center.jpg");
         }
 
         &--right {
             right: 0;
-            z-index: 1;
-            width: 70%;
             background-image: url("../assets/images/banner-right.jpg");
-            background-position-x: left;
         }
     }
 }
