--- a/src/scss/UI/_buttons.scss
+++ b/src/scss/UI/_buttons.scss
@@ -33,7 +33,8 @@
 
         &--wa,
         &--call {
-            @media (max-width: 26.5625rem) {
+            @media (max-width: 31.25rem) {
+                // 500px
                 display: none;
             }
         }
@@ -176,7 +177,8 @@
 
     &--call,
     &--wa {
-        @media (max-width: 26.5625rem) {
+        @media (max-width: 31.25rem) {
+            // 500px
             padding: 0.5rem;
             // width: 2.375rem; // 38px
             // height: 2.375rem; // 38px
