--- a/src/scss/UI/_footer.scss
+++ b/src/scss/UI/_footer.scss
@@ -72,11 +72,11 @@
 
     &__logo,
     &__logo-mobile {
-        background-image: url("../assets/icons/logo.svg");
+        background-image: url("../assets/icons/logo-desktop.svg");
         background-size: contain;
         background-repeat: no-repeat;
-        width: 14.375rem; // 230px
-        height: 4.6875rem; // 75px
+        width: 14.8125rem; // 237px
+        height: 4.625rem; // 74px
     }
 
     &__logo {
